...
                      child: Column(
                        mainAxisAlignment: MainAxisAlignment.center,
                        crossAxisAlignment: CrossAxisAlignment.stretch,
                        children: [
                          // Botão: Novo Projeto (Livre)
                          _buildMenuButton(
                            label: 'Novo Projeto',
                            icon: Icons.add_box_outlined,
                            isEnable: true,
                            onPressed: () {
                              Navigator.push(
                                context,
                                MaterialPageRoute(builder: (context) => NovoProjetoPage(
...
